force-app/main/default/objects/Activity/fields/Area_IB__c.field-meta.xml
<CustomField>
    <fullName>Area_IB__c</fullName>
    <label>Area SME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>CIBER</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>ING</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>