force-app/main/default/objects/Activity/fields/Asignado_a_nombre__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a_nombre__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignado a (nombre)</label>
    <type>Text</type>
</CustomField>