force-app/main/default/objects/Activity/fields/campa_a_Id_18__c.field-meta.xml
<CustomField>
    <fullName>campa_a_Id_18__c</fullName>
    <formula>CASESAFEID(Campanya_lookup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaña Id 18</label>
    <type>Text</type>
</CustomField>