force-app/main/default/objects/Activity/fields/Campanya__c.field-meta.xml
<CustomField>
    <fullName>Campanya__c</fullName>
    <label>Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>