force-app/main/default/objects/Activity/fields/Campanya_lookup__c.field-meta.xml
<CustomField>
    <fullName>Campanya_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaing__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>