force-app/main/default/objects/Activity/fields/Clase_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_cuenta__c</fullName>
    <formula>TEXT(Clic_comercial__r.Clase_de_cuenta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clase de cuenta</label>
    <type>Text</type>
</CustomField>