force-app/main/default/objects/Activity/fields/Clic_comercial__c.field-meta.xml
<CustomField>
    <fullName>Clic_comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades1</relationshipName>
    <type>Lookup</type>
</CustomField>