force-app/main/default/objects/Activity/fields/Clic_Comercial_Name__c.field-meta.xml
<CustomField>
    <fullName>Clic_Comercial_Name__c</fullName>
    <formula>Clic_comercial__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clic Comercial Name</label>
    <type>Text</type>
</CustomField>