force-app/main/default/objects/Activity/fields/Como_ha_ido__c.field-meta.xml
<CustomField>
    <fullName>Como_ha_ido__c</fullName>
    <label>Cómo ha ido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bien</fullName>
            </value>
            <value>
                <fullName>Mal</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>