force-app/main/default/objects/Activity/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interlocutor principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades1</relationshipName>
    <type>Lookup</type>
</CustomField>