force-app/main/default/objects/Activity/fields/Cuenta_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Id_18__c</fullName>
    <formula>CASESAFEID(Clic_comercial__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Id 18</label>
    <type>Text</type>
</CustomField>