force-app/main/default/objects/Activity/fields/Cuenta_Perfil_MKT__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Perfil_MKT__c</fullName>
    <formula>TEXT(Clic_comercial__r.Perfil_MKT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Perfil MKT</label>
    <type>Text</type>
</CustomField>