force-app/main/default/objects/Activity/fields/Descact__c.field-meta.xml
<CustomField>
    <fullName>Descact__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>