force-app/main/default/objects/Activity/fields/End_Event__c.field-meta.xml
<CustomField>
    <fullName>End_Event__c</fullName>
    <label>End_Event</label>
    <type>DateTime</type>
</CustomField>