force-app/main/default/objects/Activity/fields/Enviada_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Enviada_Agenda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviada Agenda</label>
    <type>Checkbox</type>
</CustomField>