force-app/main/default/objects/Activity/fields/Enviado_Acuerdos__c.field-meta.xml
<CustomField>
    <fullName>Enviado_Acuerdos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado Acuerdos</label>
    <type>Checkbox</type>
</CustomField>