force-app/main/default/objects/Activity/fields/Full_Descact__c.field-meta.xml
<CustomField>
    <fullName>Full_Descact__c</fullName>
    <label>Full Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>