force-app/main/default/objects/Activity/fields/GUIDCLIP__c.field-meta.xml
<CustomField>
    <fullName>GUIDCLIP__c</fullName>
    <label>GUIDCLIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>