force-app/main/default/objects/Activity/fields/Id_Evento__c.field-meta.xml
<CustomField>
    <fullName>Id_Evento__c</fullName>
    <label>Id_Evento</label>
    <type>TextArea</type>
</CustomField>