force-app/main/default/objects/Activity/fields/Interlocutor_principal_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Interlocutor_principal_Id_18__c</fullName>
    <formula>CASESAFEID( Contacto__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interlocutor principal Id 18</label>
    <type>Text</type>
</CustomField>