force-app/main/default/objects/Activity/fields/Lineas_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Lineas_de_Servicio__c</fullName>
    <label>Líneas de Servicio (Area)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Horizontal</valueSetName>
    </valueSet>
</CustomField>