force-app/main/default/objects/Activity/fields/Name_Tema__c.field-meta.xml
<CustomField>
    <fullName>Name_Tema__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <label>Name (Tema)</label>
    <type>Text</type>
</CustomField>