force-app/main/default/objects/Activity/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objetivo</label>
    <referenceTo>Objetivo__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades1</relationshipName>
    <type>Lookup</type>
</CustomField>