force-app/main/default/objects/Activity/fields/Objetivo_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_Id_18__c</fullName>
    <formula>CASESAFEID( Objetivo__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo Id 18</label>
    <type>Text</type>
</CustomField>