force-app/main/default/objects/Activity/fields/Oportunidad_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Id_18__c</fullName>
    <formula>CASESAFEID(Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Id 18</label>
    <type>Text</type>
</CustomField>