force-app/main/default/objects/Activity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades_del</relationshipName>
    <type>Lookup</type>
</CustomField>