force-app/main/default/objects/Activity/fields/Organizacion_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Organizacion_cuenta__c</fullName>
    <formula>TEXT(Clic_comercial__r.Organizacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organización cuenta</label>
    <type>Text</type>
</CustomField>