force-app/main/default/objects/Activity/fields/Origen_Tarea__c.field-meta.xml
<CustomField>
    <fullName>Origen_Tarea__c</fullName>
    <label>Origen_Tarea</label>
    <length>120</length>
    <type>Text</type>
</CustomField>