force-app/main/default/objects/Activity/fields/Perfil_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Propietario__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil Propietario</label>
    <type>Text</type>
</CustomField>