force-app/main/default/objects/Activity/fields/Siguiente_Paso__c.field-meta.xml
<CustomField>
    <fullName>Siguiente_Paso__c</fullName>
    <label>Siguiente Paso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendar otra reunión</fullName>
            </value>
            <value>
                <fullName>Piden Oferta</fullName>
            </value>
            <value>
                <fullName>Fin proceso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>