force-app/main/default/objects/Activity/fields/Start_Event__c.field-meta.xml
<CustomField>
    <fullName>Start_Event__c</fullName>
    <label>Start_Event</label>
    <type>DateTime</type>
</CustomField>