force-app/main/default/objects/Activity/fields/Tarea_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Tarea_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarea Id 18</label>
    <type>Text</type>
</CustomField>