force-app/main/default/objects/Activity/fields/Tarea_Padre__c.field-meta.xml
<CustomField>
    <fullName>Tarea_Padre__c</fullName>
    <label>Tarea Padre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>