force-app/main/default/objects/Activity/fields/Tipo_Actividad_Administrador__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Actividad_Administrador__c</fullName>
    <label>Tipo Actividad Administrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Visita Relevante</fullName>
            </value>
            <value>
                <fullName>Visita No relevante</fullName>
            </value>
            <value>
                <fullName>No visita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>