force-app/main/default/objects/Activity/fields/Tipoact__c.field-meta.xml
<CustomField>
    <fullName>Tipoact__c</fullName>
    <label>Tipo Actividad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cita</fullName>
            </value>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Tareas</fullName>
            </value>
            <value>
                <fullName>Nota</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Lead digital</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
            <value>
                <fullName>Visita cita</fullName>
                <isActive>false</isActive>
                <label>Visita cita</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>